--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,8 @@ dependencies:
   scroll_to_index: ^3.0.1
   cupertino_lists: ^1.0.1
   loggy: ^2.0.3
+  adaptive_breakpoints: ^0.1.4
+  flutter_riverpod: ^2.1.1
 
   # dart_chromecast:
   #   git:
